kubernetes/apps/default/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/controller: sonarr
    app.kubernetes.io/service: sonarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/controller: sonarr
